--- a/html/index.html
+++ b/html/index.html
@@ -5,9 +5,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/homepage.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Hello</h1>
+    <div class="main-portfolio">
+
+        <!-- Progress Bar -->
+        <div id="scroll-progress-container">
+            <div id="scroll-progress-bar"></div>
+        </div>
+
+        <!-- Home Page Content -->
+         <div class="main-home-page-content">
+            <!-- image section -->
+            <div class="homepage-image-section">
+                <div id="yuktha-image-section">
+                    <img src="../assets/yuktha.png" alt="">
+                </div>
+                <div id="wingherry-image-section">
+                    <img src="../assets/wingherry.png" alt="">
+                </div>
+            </div>
+
+            <!-- Introduction and profile Section -->
+             <div class="main-intro-profile-section">
+                <!-- Introduction Section -->
+                <div class="main-into-section">
+                    <div class="dot-section">
+                        <img src="../assets/dots.png" alt="">
+                    </div>
+                    <div class="main-into">
+                        <div id="hello">Hello, I'm</div>
+                        <div id="vijay">Vijay Sampangi</div>
+                        <div id="chairman">Chairman of Yuktha Constructions</div>
+                        <div id="chairman-desc">Yuktha Earth Manner, Machinery, and Constructions, and a key partner in several successful ventures, Vijay has consistently demonstrated his ability to lead complex projects with precision and deliver exceptional outcomes. His career trajectory—from corporate relations and healthcare operations to founding...</div>
+                        <div id="getintouchbtn">Get in Touch</div>
+                    </div>
+                    <div class="curl-arrow">
+                        <img src="../assets/tilt-arrow.png" alt="">
+                    </div>
+                </div>
+                <!-- Profile Section -->
+                <div class="main-profile-section">
+                    <div class="profile-sec">
+                        <img id="profile-bg" src="../assets/profilebg.png" alt="">
+                        <img id="profile-pic" src="../assets/vijay-profile.png" alt="">
+                    </div>
+                    <div class="profile-dot-section">
+                        <img src="../assets/dots.png" alt="">
+                    </div>
+                </div>
+             </div>
+         </div>
+    </div>
     <script src="../js/homepage.js"></script>
 </body>
 </html>
