--- a/html/index.html
+++ b/html/index.html
@@ -13,12 +13,18 @@
 </head>
 <body>
     <div class="main-portfolio">
-
+        <!-- Spinner -->
+        <div class="spin-container">
+            <div class="spin-box">
+              <span id="spin-dot" class="spin-dot"></span>
+              <span id="spin-text">Vijay Sampangi</span>
+            </div>
+        </div>
         <!-- Progress Bar -->
         <div id="scroll-progress-container">
             <div id="scroll-progress-bar"></div>
         </div>
-
+        
         <!-- Home Page Content -->
          <div class="main-home-page-content">
             <!-- image section -->
@@ -163,7 +169,7 @@
                     <img src="../assets/facebook.svg" alt="" onclick="window.location.href='https://www.facebook.com/share/1BE7RgF68c/'" >
                     <img src="../assets/instagram.svg" alt="" onclick="window.location.href='https://www.instagram.com/visheysampangi?igsh=MTVwNm9kYTA1MGljbQ=='">
                     <img src="../assets/youtube.svg" alt="" onclick="window.location.href='https://youtube.com/@yukthaconstructions?si=s6fSNCyg8U8K1U64'">
-                    <!-- https://www.linkedin.com/in/vishey-sampangi-1817a325?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app -->
+                    <img src="../assets/linkedin-icon.svg" alt="" onclick="window.location.href='https://www.linkedin.com/in/vishey-sampangi-1817a325?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app'">
                 </div>
             </div>
             <div class="main-footer-map">
