--- a/html/index.html
+++ b/html/index.html
@@ -569,6 +569,30 @@
                 <!-- Awards & Certifications end -->
     
             </div>
+             <!-- In Association  -->
+         <div class="content-holder-box">
+            <div class="content-headings">
+                <div class="lines"></div>
+                <div class="content-holder-heading">In Association</div>
+                <div class="lines"></div>
+            </div>
+            <div class="association-main-box">
+                <div class="association-boxes">
+                    <div class="association-box">
+                        <img src="../assets/association.svg" alt="">
+                        <div>Vigilance Director <span>Human Rights</span></div>
+                    </div>
+                    <div class="association-box">
+                        <img src="../assets/association.svg" alt="">
+                        <div>Telangana Contarctors Association <span>Member</span></div>
+                    </div>
+                    <div class="association-box">
+                        <img src="../assets/mithra.svg" alt="">
+                        <div>Mithra Events <span>Co-Partner</span></div>
+                    </div>
+                </div>
+            </div>
+        </div>
         </div>
 
         <!-- Footer -->
