--- a/html/index.html
+++ b/html/index.html
@@ -65,7 +65,7 @@
                 <div class="main-profile-section">
                     <div class="profile-sec">
                         <img id="profile-bg" src="../assets/profile-bg.svg" alt="">
-                        <img id="profile-pic" src="../assets/profile-pic.svg" alt="">
+                        <img id="profile-pic" src="../assets/new-profile.png" alt="">
                     </div>
                     <div class="profile-dot-section">
                         <img class="dot-profile" src="../assets/dot.svg" alt="">
@@ -115,7 +115,7 @@
                         
                         <div class="textarea">
                             <label for="enquireAbout">Enquire About :</label>
-                            <textarea id="enquireAbout" name="enquireAbout" placeholder="Enquire about" required oninput="checkWordLimit()" maxlength="1000" rows="5"></textarea>
+                            <textarea id="enquireAbout" name="enquireAbout" placeholder="Write Enquire about here in 0 to 250 words" required oninput="checkWordLimit()" maxlength="1000" rows="5"></textarea>
                             <p id="wordCount">Word count: 0/250</p>
                         </div>
                         
