--- a/html/index.html
+++ b/html/index.html
@@ -123,6 +123,7 @@
                   </form>
                 </div>
             </div>
+
          </div>
 
          <!-- Main Content  -->
@@ -541,7 +542,7 @@
                               </div>
                           </div>
                           <div class="carousel-item left">
-                              <img src="../assets/yuktha-logo.svg" alt="Image 3">
+                              <img src="../assets/yukthaconsructionimage.jpg" alt="Image 3">
                               <div class="slanttextbox">
                                   <div class="slanttext">
                                       <div class="slanthead">Yukthaa Constructions</div>
@@ -552,7 +553,7 @@
                               </div>
                           </div>
                           <div class="carousel-item behind">
-                              <img src="../assets/bestemp.jpg" alt="Image 4">
+                              <img src="../assets/award.jpg" alt="Image 4">
                               <div class="slanttextbox">
                                   <div class="slanttext">
                                       <div class="slanthead">Biachri</div>
@@ -567,32 +568,66 @@
                 </div>
                 <!-- slider code end -->
                 <!-- Awards & Certifications end -->
-    
-            </div>
-             <!-- In Association  -->
-         <div class="content-holder-box">
-            <div class="content-headings">
-                <div class="lines"></div>
-                <div class="content-holder-heading">In Association</div>
-                <div class="lines"></div>
-            </div>
-            <div class="association-main-box">
-                <div class="association-boxes">
-                    <div class="association-box">
-                        <img src="../assets/association.svg" alt="">
-                        <div>Vigilance Director <span>Human Rights</span></div>
+                
+                <!-- Media -->
+                <div class="content-holder-box">
+                    <div class="content-headings">
+                        <div class="lines"></div>
+                        <div class="content-holder-heading">Media</div>
+                        <div class="lines line"></div>
                     </div>
-                    <div class="association-box">
-                        <img src="../assets/association.svg" alt="">
-                        <div>Telangana Contarctors Association <span>Member</span></div>
-                    </div>
-                    <div class="association-box">
-                        <img src="../assets/mithra.svg" alt="">
-                        <div>Mithra Events <span>Co-Partner</span></div>
+                    <div class="media-box">
+                        <div class="media-holder">
+                            <div class="media-yt">
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/hFX0AskzmwY?si=Ykb5Re5eRmsflVHA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            </div>
+                        </div>
+                        <div class="media-holder">
+                            <div class="media-yt">
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/vbqFl62-3DY?si=uQyY9bylI-eESC1y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            </div>
+                        </div>
+                        <div class="media-holder">
+                            <div class="media-yt">
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/4sspVwvJy38?si=Xr7OOsS4RayKQeFo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            </div>
+                        </div>
+                        <div class="media-holder">
+                            <div class="media-yt">
+                                <img src="../assets/mediaspb.jpg" alt="">
+                            </div>
+                        </div>
                     </div>
                 </div>
+                <!-- Media End -->
+
             </div>
-        </div>
+                <!-- In Association  -->
+                <div class="content-holder-box">
+                    <div class="content-headings">
+                        <div class="lines"></div>
+                        <div class="content-holder-heading">In Association</div>
+                        <div class="lines"></div>
+                    </div>
+                    <div class="association-main-box">
+                        <div class="association-boxes">
+                            <div class="association-box">
+                                <img src="../assets/association.svg" alt="">
+                                <div>Vigilance Director <span>Human Rights</span></div>
+                            </div>
+                            <div class="association-box">
+                                <img src="../assets/association.svg" alt="">
+                                <div>Telangana Contarctors Association <span>Member</span></div>
+                            </div>
+                            <div class="association-box">
+                                <img src="../assets/mithra.svg" alt="">
+                                <div>Mithra Events <span>Co-Partner</span></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
         </div>
 
         <!-- Footer -->
@@ -623,7 +658,9 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d121813.3233374813!2d78.34446!3d17.4277923!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb9127e282d7d5%3A0xdc037aa92d3fc5c9!2sWingherry%20Technologies%20Pvt.Ltd!5e0!3m2!1sen!2sin!4v1738054470109!5m2!1sen!2sin" width="600" height="320" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
          </div>
+
     </div>
+
     <script src="../js/homepage.js"></script>
     <script src="../js/maincontent.js"></script>
     <script src="../js/slider.js"></script>
