--- a/html/index.html
+++ b/html/index.html
@@ -146,7 +146,7 @@
                                 <div class="upper-content-bx">
                                     <div class="upper-part">
                                         <div class="upper-icon">
-                                            <img src="../assets/hospital.svg" alt="">
+                                            <img src="../assets/apollo.svg" alt="">
                                         </div>
                                         <div class="exp-content">
                                             <div class="exp-head">Apollo Hospitals, Hyderabad</div>
@@ -206,7 +206,7 @@
                                 <div class="upper-content-bx">
                                     <div class="upper-part">
                                         <div class="upper-icon">
-                                            <img src="../assets/wingherry.svg" alt="">
+                                            <img src="../assets/testengg.svg" alt="">
                                         </div>
                                         <div class="exp-content">
                                             <div class="exp-head">Testegg Software Pvt Ltd</div>
@@ -255,7 +255,7 @@
                                 <div class="upper-content-bx">
                                     <div class="upper-part">
                                         <div class="upper-icon">
-                                            <img src="../assets/hospital.svg" alt="">
+                                            <img src="../assets/apollo.svg" alt="">
                                         </div>
                                         <div class="exp-content">
                                             <div class="exp-head">Basavatarakam Indo Hospital</div>
@@ -304,7 +304,7 @@
                                 <div class="upper-content-bx">
                                     <div class="upper-part">
                                         <div class="upper-icon">
-                                            <img src="../assets/wingherry.svg" alt="">
+                                            <img src="../assets/testengg.svg" alt="">
                                         </div>
                                         <div class="exp-content">
                                             <div class="exp-head">Wingherry Technologies</div>
@@ -351,7 +351,7 @@
                                 <div class="upper-content-bx">
                                     <div class="upper-part">
                                         <div class="upper-icon">
-                                            <img src="../assets/yukthaconstruction.svg" alt="">
+                                            <img src="../assets/yutha-icon.svg" alt="">
                                         </div>
                                         <div class="exp-content">
                                             <div class="exp-head">Yuktha Construction &Yuktha Earth Movers Machinery Works</div>
@@ -395,10 +395,10 @@
     
                         <!-- rounded svg -->
                         <div class="roundedimg roundleft">
-                            <img src="../assets/Group 22366.svg" alt="">
+                            <img src="../assets/middle-icon.svg" alt="">
                         </div>
                         <div class="roundedimg roundright">
-                            <img src="../assets/Group 22367.svg" alt="">
+                            <img src="../assets/middle-icon.svg" alt="">
                         </div>
                         
                         <!-- rounded svg end -->
@@ -433,7 +433,7 @@
                                 <div class="upper-content-bx">
                                     <div class="upper-part">
                                         <div class="upper-icon">
-                                            <img src="../assets/MIMB.svg" alt="">
+                                            <img src="../assets/qualifiction.svg" alt="">
                                         </div>
                                         <div class="exp-content">
                                             <div class="exp-head">MIBM GLOBAL (Matrix Institute of Business Management) <span class="lightheading">MBA</span></div>
@@ -635,7 +635,7 @@
             <div class="main-footer-info">
                 <div class="footer-info">
                     <div class="info-details">
-                        <img src="../assets/user-icon.svg" alt="">
+                        <img src="../assets/name-icon.svg" alt="">
                         <span>Vijay Sampangi</span>
                     </div>
                     <div class="info-details">
